# physics-with-units

./: README.md  __init__.py  main.py  pyproject.toml
classes/: __init__.py  errors.py  quantity.py  unit.py  vector.py
constants/: __init__.py  constants.py
dimensions/: em.json  mechanics.json
tests/: conftest.py  test_quantity.py  test_unit.py  test_vector.py
