[tool.poetry]
name = "physics-with-units"
version = "0.1.0"
description = "Implementation of physical quantities with units for both scalars and vectors"
authors = ["Christian Michel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.1"
scipy = "^1.12.0"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
